# homomorphism

./: README.rst  pyproject.toml
doc/: wordbox.bib  wordbox.tex
homomorphism/: __init__.py  convert.py  extra.py  planets.py  reduce2.py  sat_homomorphism.py  seqcounter.py  solve.py  timeout.py  utility.py  z3_homomorphism.py
tests/: test_homomorphism.py
